--- a/src/lib/makefile
+++ b/src/lib/makefile
@@ -28,14 +28,17 @@ all: build archive
 archive:
 	@echo ''
 	@echo '--- BUILDING LIBRARY -----------------------'
-	ar rcs $(DIR_BUILD)$(LIB) $(DIR_BUILD)nimble.o $(DIR_BUILD)nimble_exception.o $(DIR_BUILD)nimble_lexer.o $(DIR_BUILD)nimble_uid.o
+	ar rcs $(DIR_BUILD)$(LIB) $(DIR_BUILD)nimble.o $(DIR_BUILD)nimble_color.o $(DIR_BUILD)nimble_exception.o $(DIR_BUILD)nimble_lexer.o $(DIR_BUILD)nimble_uid.o
 	@echo '--- DONE -----------------------------------'
 	@echo ''
 
-build: nimble.o nimble_exception.o nimble_lexer.o nimble_uid.o
+build: nimble.o nimble_color.o nimble_exception.o nimble_lexer.o nimble_uid.o
 
 nimble.o: $(DIR_SRC)nimble.cpp $(DIR_INC)nimble.h
 	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nimble.cpp -o $(DIR_BUILD)nimble.o
+
+nimble_color.o: $(DIR_SRC)nimble_color.cpp $(DIR_INC)nimble_color.h
+	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nimble_color.cpp -o $(DIR_BUILD)nimble_color.o
 
 nimble_exception.o: $(DIR_SRC)nimble_exception.cpp $(DIR_INC)nimble_exception.h
 	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nimble_exception.cpp -o $(DIR_BUILD)nimble_exception.o
