added command factory class (partial)

--- a/src/lib/makefile
+++ b/src/lib/makefile
@@ -28,11 +28,11 @@ all: build archive
 archive:
 	@echo ''
 	@echo '--- BUILDING LIBRARY -----------------------'
-	ar rcs $(DIR_BUILD)$(LIB) $(DIR_BUILD)nimble.o $(DIR_BUILD)nimble_color.o $(DIR_BUILD)nimble_exception.o $(DIR_BUILD)nimble_language.o $(DIR_BUILD)nimble_lexer.o $(DIR_BUILD)nimble_uid.o
+	ar rcs $(DIR_BUILD)$(LIB) $(DIR_BUILD)nimble.o $(DIR_BUILD)nimble_color.o $(DIR_BUILD)nimble_command.o $(DIR_BUILD)nimble_exception.o $(DIR_BUILD)nimble_language.o $(DIR_BUILD)nimble_lexer.o $(DIR_BUILD)nimble_uid.o
 	@echo '--- DONE -----------------------------------'
 	@echo ''
 
-build: nimble.o nimble_color.o nimble_exception.o nimble_language.o nimble_lexer.o nimble_uid.o
+build: nimble.o nimble_color.o nimble_command.o nimble_exception.o nimble_language.o nimble_lexer.o nimble_uid.o
 
 nimble.o: $(DIR_SRC)nimble.cpp $(DIR_INC)nimble.h
 	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nimble.cpp -o $(DIR_BUILD)nimble.o
@@ -47,6 +47,9 @@ nimble_language.o: $(DIR_SRC)nimble_language.cpp $(DIR_INC)nimble_language.h
 	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nimble_language.cpp -o $(DIR_BUILD)nimble_language.o
 
 # COMPONENTS
+
+nimble_command.o: $(DIR_SRC)nimble_command.cpp $(DIR_INC)nimble_command.h
+	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nimble_command.cpp -o $(DIR_BUILD)nimble_command.o
 
 nimble_uid.o: $(DIR_SRC)nimble_uid.cpp $(DIR_INC)nimble_uid.h
 	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nimble_uid.cpp -o $(DIR_BUILD)nimble_uid.o
