--- a/src/lib/makefile
+++ b/src/lib/makefile
@@ -28,17 +28,20 @@ all: build archive
 archive:
 	@echo ''
 	@echo '--- BUILDING LIBRARY -----------------------'
-	ar rcs $(DIR_BUILD)$(LIB) $(DIR_BUILD)nimble.o $(DIR_BUILD)nimble_color.o $(DIR_BUILD)nimble_command.o $(DIR_BUILD)nimble_exception.o $(DIR_BUILD)nimble_executor.o $(DIR_BUILD)nimble_language.o $(DIR_BUILD)nimble_lexer.o $(DIR_BUILD)nimble_node.o $(DIR_BUILD)nimble_parser.o $(DIR_BUILD)nimble_token.o $(DIR_BUILD)nimble_trace.o $(DIR_BUILD)nimble_uid.o
+	ar rcs $(DIR_BUILD)$(LIB) $(DIR_BUILD)nimble.o $(DIR_BUILD)nimble_color.o $(DIR_BUILD)nimble_command.o $(DIR_BUILD)nimble_environment.o $(DIR_BUILD)nimble_exception.o $(DIR_BUILD)nimble_executor.o $(DIR_BUILD)nimble_language.o $(DIR_BUILD)nimble_lexer.o $(DIR_BUILD)nimble_node.o $(DIR_BUILD)nimble_parser.o $(DIR_BUILD)nimble_token.o $(DIR_BUILD)nimble_trace.o $(DIR_BUILD)nimble_uid.o
 	@echo '--- DONE -----------------------------------'
 	@echo ''
 
-build: nimble.o nimble_color.o nimble_command.o nimble_exception.o nimble_executor.o nimble_language.o nimble_lexer.o nimble_node.o nimble_parser.o nimble_token.o nimble_trace.o nimble_uid.o
+build: nimble.o nimble_color.o nimble_command.o nimble_environment.o nimble_exception.o nimble_executor.o nimble_language.o nimble_lexer.o nimble_node.o nimble_parser.o nimble_token.o nimble_trace.o nimble_uid.o
 
 nimble.o: $(DIR_SRC)nimble.cpp $(DIR_INC)nimble.h
 	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nimble.cpp -o $(DIR_BUILD)nimble.o
 
 nimble_color.o: $(DIR_SRC)nimble_color.cpp $(DIR_INC)nimble_color.h
 	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nimble_color.cpp -o $(DIR_BUILD)nimble_color.o
+
+nimble_environment.o: $(DIR_SRC)nimble_environment.cpp $(DIR_INC)nimble_environment.h
+	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nimble_environment.cpp -o $(DIR_BUILD)nimble_environment.o
 
 nimble_exception.o: $(DIR_SRC)nimble_exception.cpp $(DIR_INC)nimble_exception.h
 	$(CC) $(CC_FLAGS) -c $(DIR_SRC)nimble_exception.cpp -o $(DIR_BUILD)nimble_exception.o
